[package]
name = "BevyJam7"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Needed to keep bevy and obvhs on the same version:
# (obvhs can use 0.30 or 0.31, bevy 0.18 uses 0.30, bevy main uses 0.31)
# cargo update -p glam@0.31 --precise 0.30.10
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "common_api",
    "bevy_gltf",
    "ktx2",
    "zstd_rust",
    "jpeg",
    "bevy_camera_controller",
    "free_camera",
    "gltf_animation",
    "hdr",
] }
image = "0.25.9"
obvhs = "0.3.0"
rayon = "1.11.0"
softbuffer = "0.4.8"

wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

winit = "0.30"
# without this I was getting:
# error: The platform you're compiling for is not supported by winit
# --> /home/griffin/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/winit-0.30.12/src/platform_impl/mod.rs:78:1

bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
argh = "0.1"
itertools = "0.14"
wgpu-types = "27" #Needed for bevy interop types since bevy doesn't re-export everything

uniform_set_derive = { path = "../../../../opengl/bevy_opengl/uniform_set_derive" }
bgl2 = { path = "../../../../opengl/bevy_opengl" }
glow = "0.16"
bytemuck = "1.24"

light_volume_baker = { path = "../light_volume_baker", optional = true }

egui_glow = "0.33"
bevy_egui = { version = "0.39", default-features = false, features = [
    "manage_clipboard",
    "open_url",
    "default_fonts",
    "bytemuck",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["dev"]
dev = ["bevy/file_watcher", "asset_baking"]
asset_baking = ["dep:light_volume_baker"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
